--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
 python:
-  - 3.7.0
+  - 3.6
 
 before_install:
   - ./tools/travis-before-install.sh
+
+install:
+  - pip install -r requirements.txt
 
 sctipt:
   - ./tools/travis-test.sh
