--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 3.6
 
 before_install:
-  - ./tools/travis-before-install.sh
+  - pip install --upgrade pip
 
 install:
   - pip install -r requirements.txt
