Codecov first config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ before_install: pip install --upgrade pip
 
 install: pip install -r requirements.txt
 
-script: python -m pytest src/test/v8n.py
+script:
+  - python -m pytest --cov=./ src/test/v8n.py
+  - codecov
