--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install: pip install --upgrade pip
 install: pip install -r requirements.txt
 
 script:
-  - python -m pytest --cov=./ src/test/v8n.py
+  - python -m pytest --cov=./ src/test/v8n-tests.py
   - codecov
